deployment/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-summarization
  labels:
    app: text-summarization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-summarization
  template:
    metadata:
      labels:
        app: text-summarization
    spec:
      containers:
        - name: text-summarization
          image: 5elementsofai/text-summarization
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
      restartPolicy: Always
