deployment/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: text-summarization
  labels:
    service: text-summarization
spec:
  type: ClusterIP
  selector:
    app: text-summarization
  ports:
    - port: 5000
      targetPort: 5000
