deployment/manifests/api-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <repo>-aicollaboration.io
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - aiproduct.io
      secretName: tls-latest-aiproduct.io
  rules:
    - host: <repo>.aiproduct.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: <repo>
                port:
                  number: 5000
