deployment/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: text-summarization
  labels:
    service: text-summarization
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: text-summarization
              servicePort: 5000
